syntax = "proto3";

package com.muuzika.registry;

import "common.proto";

message ServerId {
  uint32 server_id = 1;
}

message ServerInfo {
  ServerId id = 1;
  string address = 2;
}

message RoomToken {
  string token = 1;
}